# hatch-pip-compile

./: .pre-commit-config.yaml  .releaserc.js  .releaserc.json  404.html  README.md  index.html  mkdocs.yaml  objects.inv  pyproject.toml  requirements.txt
.github/workflows/: lint.yaml  publish.yaml  release.yaml  tests.yaml
contributing/: index.html
docs/: cli.md  cli_usage.md  contributing.md  examples.md  gen_pages.py  gen_ref_pages.py  index.md  notes.md  upgrading.md
hatch_pip_compile/: __about__.py  __init__.py  __main__.py  base.py  cli.py  exceptions.py  header.py  hooks.py  installer.py  lock.py  plugin.py  resolver.py
reference/: index.html
reference/SUMMARY/: index.html
reference/__about__/: index.html
reference/exceptions/: index.html
reference/hooks/: index.html
reference/installer/: index.html
reference/lock/: index.html
reference/plugin/: index.html
requirements/: requirements-docs.txt  requirements-lint.txt  requirements-matrix.py3.10.txt  requirements-matrix.py3.11.txt  requirements-matrix.py3.12.txt  requirements-matrix.py3.13.txt  requirements-matrix.py3.14.txt  requirements-matrix.py3.8.txt  requirements-matrix.py3.9.txt  requirements-test.txt  requirements-versions.1.10.x.txt  requirements-versions.1.11.x.txt  requirements-versions.1.12.x.txt  requirements-versions.1.13.x.txt  requirements-versions.1.14.x.txt  requirements-versions.1.15.x.txt  requirements-versions.1.16.x.txt  requirements-versions.1.7.x.txt  requirements-versions.1.8.x.txt  requirements-versions.1.9.x.txt
search/: search_index.json
tests/: __init__.py  conftest.py  test_cli.py  test_example.py  test_installer.py  test_integration.py  test_integration_cli.py  test_lock.py  test_plugin.py
tests/data/: pyproject.toml  requirements.txt
tests/data/requirements/: requirements-test.txt
