[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
authors = [
  {name = "Justin Flannery", email = "juftin@juftin.com"}
]
dependencies = [
  "hatch"
]
description = "hatch plugin to use pip-compile to manage project dependencies"
license = "MIT"
name = "hatch-pip-compile"
readme = "README.md"
requires-python = ">=3.8"
version = "0.1.0"

[tool.hatch.env]
requires = ["hatch-pip-compile"]

[tool.hatch.envs.default]
pip-compile-constraint = "default"
type = "pip-compile"

[tool.hatch.envs.lint]
dependencies = [
  "mypy>=1.6.1",
  "ruff~=0.1.4"
]
detached = true

[tool.hatch.envs.test]
dependencies = [
  "pytest",
  "pytest-cov"
]
